fix clipped video for other attendees when fullscreen active

--- a/Peers/Peers.scss
+++ b/Peers/Peers.scss
@@ -157,6 +157,10 @@ $meeting_padding_top: 3rem;
 
 		> .peer-container:not(.fullscreen) {
 			grid-row: 2;
+
+			.peerView > video {
+				object-fit: contain;
+			}
 		}
 
 	}
